--- a/packages/cloud_firestore_odm_generator/pubspec.yaml
+++ b/packages/cloud_firestore_odm_generator/pubspec.yaml
@@ -5,13 +5,15 @@ repository: https://github.com/firebaseextended/firestoreodm-flutter
 version: 1.2.0
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
+  sdk: ">=3.8.0 <4.0.0"
 
 dependencies:
-  analyzer: ">=5.12.0 <8.0.0"
-  build: ^2.4.1
-  build_config: ^1.1.2
-  cloud_firestore_odm: ^1.2.0
+  analyzer: ">=6.0.0 <9.0.0"
+  build: ^3.0.2
+  build_config: ^1.2.0
+  # cloud_firestore_odm: ^1.2.0
+  cloud_firestore_odm:
+    path: ../cloud_firestore_odm
   collection: ^1.18.0
   freezed_annotation: ^3.0.0
   # Can be removed once this is fixed https://github.com/dart-lang/graphs/issues/86
@@ -19,12 +21,12 @@ dependencies:
   json_annotation: ^4.9.0
   meta: ^1.12.0
   recase: ^4.1.0
-  source_gen: ^2.0.0
-  source_helper: ^1.3.4
+  source_gen: ^3.1.0
+  source_helper: ^1.3.7
 
 dev_dependencies:
-  build_runner: ^2.4.8
-  expect_error: ^1.0.8
-  json_serializable: ^6.9.4
-  matcher: ^0.12.16
-  test: ^1.25.1
+  build_runner: ^2.7.0
+  expect_error: ^1.0.10
+  json_serializable: ^6.11.0
+  matcher: ^0.12.17
+  test: ^1.25.15
