--- a/packages/cloud_firestore_odm_generator/pubspec.yaml
+++ b/packages/cloud_firestore_odm_generator/pubspec.yaml
@@ -2,7 +2,7 @@ name: cloud_firestore_odm_generator
 description: A code generator for cloud_firestore_odm.
 homepage: https://firebase.flutter.dev/docs/firestore/odm
 repository: https://github.com/firebaseextended/firestoreodm-flutter
-version: 1.2.0
+version: 1.3.0
 
 environment:
   sdk: ">=3.8.0 <4.0.0"
@@ -11,9 +11,10 @@ dependencies:
   analyzer: ">=6.0.0 <9.0.0"
   build: ^3.0.2
   build_config: ^1.2.0
-  # cloud_firestore_odm: ^1.2.0
-  cloud_firestore_odm:
-    path: ../cloud_firestore_odm
+  cloud_firestore_odm: ^1.2.0
+  # For testing locally
+  # cloud_firestore_odm:
+  #   path: ../cloud_firestore_odm
   collection: ^1.18.0
   freezed_annotation: ^3.0.0
   # Can be removed once this is fixed https://github.com/dart-lang/graphs/issues/86
